--- a/logistics/test/Land.html
+++ b/logistics/test/Land.html
@@ -202,7 +202,7 @@
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h2 class="display-4 mb-3">Key Advantages of Road Freight</h2>
+            <h2 class="display-4 mb-3">Key Advantages of Inland Freight</h2>
             <p class="lead fs-lg mb-8 pe-xxl-2">Cost-Effective for Short and Medium Distances</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6 col-lg-12 col-xl-6">
@@ -212,7 +212,7 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Flexibility and Accessibility:</h4>
-                    <p class="mb-0">Road freight offers unmatched flexibility, allowing for door-to-door delivery services. It can reach locations that are not accessible by air or sea, making it a critical link in the supply chain.</p>
+                    <p class="mb-0">Inland freight offers unmatched flexibility, allowing for door-to-door delivery services. It can reach locations that are not accessible by air or sea, making it a critical link in the supply chain.</p>
                   </div>
                 </div>
               </div>
@@ -224,7 +224,7 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Cost-Effective for Short and Medium Distances</h4>
-                    <p class="mb-0">For shorter and medium distances, road freight is often the most cost-effective option, especially when considering the lower handling costs and the ability to consolidate shipments.</p>
+                    <p class="mb-0">For shorter and medium distances, inland freight is often the most cost-effective option, especially when considering the lower handling costs and the ability to consolidate shipments.</p>
                   </div>
                 </div>
               </div>
@@ -236,7 +236,7 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Versatile Transport Options</h4>
-                    <p class="mb-0">Road freight can handle a wide range of cargo types, from small parcels to oversized loads, and offers different vehicle types, such as trucks, trailers, and vans, to suit specific shipping needs</p>
+                    <p class="mb-0">Inland freight can handle a wide range of cargo types, from small parcels to oversized loads, and offers different vehicle types, such as trucks, trailers, and vans, to suit specific shipping needs</p>
                   </div>
                 </div>
               </div>
@@ -247,7 +247,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-truck"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Types of Road Freight Services</h4>
+                    <h4 class="mb-1">Types of Inland Freight Services</h4>
                     <p class="mb-0">Full Truckload (FTL), Less than Truckload (LTL), Intermodal Transportation.</p>
                   </div>
                 </div>
