--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -124,7 +124,6 @@
             <h4 class="widget-title text-white mb-3">Learn More</h4>
             <ul class="list-unstyled">
               <li><a href="aboutLogistics.html">Our Story</a></li>
-              <li><a href="terms.html">Terms of Use</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -420,7 +419,10 @@
               </div>
               <div>
                 <h5 class="mb-1">Address</h5>
-                <address>Misiones 1372 6th Floor, Montevideo, Uruguay</address>
+
+                <address>Uruguay, Montevideo, Misiones 1372 6th Floor </address>
+                <address>Paraguay, Asuncion, Avda.. Aviadores del chaco Nº. 3207, Edif. Trading Park, suite 1502, 1503</address>
+
               </div>
             </div>
             <div class="d-flex flex-row">
@@ -484,7 +486,6 @@
               <ul class="list-unstyled  mb-0">
                 <li><a href="aboutLogistics.html">About Us</a></li>
                 <li><a href="Project.html">Projects</a></li>
-                <li><a href="terms.html">Terms of Use</a></li>
               </ul>
             </div>
             <!-- /.widget -->
