--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -220,6 +220,8 @@
           <!-- /column -->
         </div>
         
+        <hr>
+
         <div class="row mb-14 mb-md-16">
           <div class="col-xl-10 mx-auto mt-n19">
             <div class="card">
@@ -247,15 +249,7 @@
                       </div>
                     </div>
                     <!--/div -->
-                    <div class="d-flex flex-row">
-                      <div>
-                        <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-phone-volume"></i> </div>
-                      </div>
-                      <div>
-                        <h5 class="mb-1">Phone</h5>
-                        <p><a href="tel:+59521600607">00 (+595) 21 600 607</a></p>
-                      </div>
-                    </div>
+                    
                     <!--/div -->
                     <div class="d-flex flex-row">
                       <div>
@@ -318,8 +312,8 @@
                   <div class="form-select-wrapper mb-4">
                     <select class="form-select" id="form-select" name="department" required>
                       <option selected disabled value="">Select a department</option>
-                      <option value="Sales">Sales</option>
-                      <option value="Marketing">Marketing</option>
+                      <option value="Impo">Impo</option>
+                      <option value="Expo">Expo</option>
                       <option value="Customer Support">Customer Support</option>
                     </select>
                     <div class="valid-feedback"> Looks good! </div>
@@ -390,7 +384,6 @@
             <ul class="list-unstyled  mb-0">
               <li><a href="aboutLogistics.html">About Us</a></li>
               <li><a href="Project.html">Projects</a></li>
-              <li><a href="terms.html">Terms of Use</a></li>
             </ul>
           </div>
           <!-- /.widget -->
