--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -124,7 +124,7 @@
                 <div class="col-lg-6">
                   <div class="p-10 p-md-11 p-lg-13">
                     <h2 class="display-4 mb-3">Let’s Talk</h2>
-                    <p class="lead fs-lg">Let's make something great together. We are trusted by over 1000+ clients. Join them by using our services and grow your business.</p>
+                    <p class="lead fs-lg">Let's make something great together. Join us by using our services and grow your business.</p>
                   </div>
                   <!--/div -->
                 </div>
@@ -193,13 +193,6 @@
                       </div>
                     </div>
                     <!-- /column -->
-                    <div class="col-12">
-                      <div class="form-check mb-4">
-                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                        <label class="form-check-label" for="invalidCheck"> I agree to <a href="#" class="hover">terms and policy</a>. </label>
-                        <div class="invalid-feedback"> You must agree before submitting. </div>
-                      </div>
-                    </div>
                     <!-- /column -->
                     <div class="col-12">
                       <input type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Send message">
@@ -219,9 +212,14 @@
                   </div>
                   <div>
                     <h5 class="mb-1">Address</h5>
-                    <address>Misiones 1372, 6th Floor, Montevideo, Uruguay</address>
-                  </div>
+                    <br>
+                    <address> - Uruguay, Montevideo, Misiones 1372, 6th Floor</address>
+
+                    <address>- Paraguay, Asuncion, Avda. Aviadores del chaco NO. 3207, Edif. Trading Park of. 1502, 1503</address>
+
+                  </div> 
                 </div>
+                
                 <div class="d-flex flex-row">
                   <div>
                     <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-phone-volume"></i> </div>
@@ -290,8 +288,6 @@
             <ul class="list-unstyled  mb-0">
               <li><a href="aboutLogistics.html">About Us</a></li>
               <li><a href="Project.html">Projects</a></li>
-              <li><a href="terms.html">Terms of Use</a></li>
-              <li><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
           <!-- /.widget -->
