--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -364,12 +364,12 @@
                   </div>
                   <!--/.swiper-slide -->
                   <div class="swiper-slide">
-                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/peluffo.jpeg" srcset="./assets/img/avatars/t3@2x.jpg 2x" alt="" />
-                    <h4 class="mb-1">Julieta Peluffo</h4>
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/machado.jpeg" srcset="./assets/img/avatars/t3@2x.jpg 2x" alt="" />
+                    <h4 class="mb-1">Alvaro Machado </h4>
                     <div class="meta mb-2">Sales</div>
-                    <p class="mb-2">Estudiante de Lic. en Negocios Internacionales con Diploma en Marketing.</p>
+                    <p class="mb-2">Regional Sales Manager</p>
                     <nav class="nav social justify-content-center text-center mb-0">
-                      <a href="https://www.linkedin.com/in/julietapeluffocabrera/"><i class="uil uil-linkedin"></i></a>
+                      <a href="https://www.linkedin.com/in/alvaro-luis-machado-739220238/?originalSubdomain=uy"><i class="uil uil-linkedin"></i></a>
                     </nav>
                     <!-- /.social -->
                   </div>
