--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -341,7 +341,7 @@
               <div class="swiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/mcpena.jpeg" srcset="./assets/img/avatars/t1@2x.jpg 2x" alt="" />
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/mcpena.jpeg"alt="Cecilia Pena" />
                     <h4 class="mb-1">Cecilia Pena</h4>
                     <div class="meta mb-2">CEO</div>
                     <p class="mb-2">Director.</p>
@@ -353,7 +353,7 @@
                   </div>
                   <!--/.swiper-slide -->
                   <div class="swiper-slide">
-                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/aguirre.jpeg" srcset="./assets/img/avatars/t2@2x.jpg 2x" alt="" />
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/aguirre.jpeg"  alt="Gonzalo Aguirre" />
                     <h4 class="mb-1">Gonzalo Aguirre</h4>
                     <div class="meta mb-2">Senior Manager Business Development</div>
                     <p class="mb-2">Expert on cargo project.</p>
@@ -364,7 +364,7 @@
                   </div>
                   <!--/.swiper-slide -->
                   <div class="swiper-slide">
-                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/machado.jpeg" srcset="./assets/img/avatars/t3@2x.jpg 2x" alt="" />
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/machado.jpeg"  alt="Alvaro Machado" />
                     <h4 class="mb-1">Alvaro Machado </h4>
                     <div class="meta mb-2">Sales</div>
                     <p class="mb-2">Regional Sales Manager</p>
@@ -374,10 +374,19 @@
                     <!-- /.social -->
                   </div>
                   <!--/.swiper-slide -->
-                 
+                  <div class="swiper-slide">
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/nonphoto.jpeg" alt="" />
+                    <h4 class="mb-1">Laura Saravia </h4>
+                    <div class="meta mb-2">Sales and Ops</div>
+                    <p class="mb-2">Operations Manager</p>
+                    <nav class="nav social justify-content-center text-center mb-0">
+                      <a href="https://www.linkedin.com/in/alvaro-luis-machado-739220238/?originalSubdomain=uy"><i class="uil uil-linkedin"></i></a>
+                    </nav>
+                    <!-- /.social -->
+                  </div>
                   <!--/.swiper-slide -->
                   <div class="swiper-slide">
-                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/malvez.jpeg" srcset="./assets/img/avatars/t5@2x.jpg 2x" alt="" />
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/malvez.jpeg"  alt="Mario Alvez" />
                     <h4 class="mb-1">Mario Alvez</h4>
                     <div class="meta mb-2">Sales</div>
                     <p class="mb-2">Senior Sales executive.</p>
