--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -346,11 +346,23 @@
                     <div class="meta mb-2">CEO</div>
                     <p class="mb-2">Director.</p>
                     <nav class="nav social justify-content-center text-center mb-0">
-                      <a href="#"><i class="uil uil-linkedin"></i></a>
+                      <a href="https://www.linkedin.com/in/ceciliapena/"><i class="uil uil-linkedin"></i></a>
 
                     </nav>
                     <!-- /.social -->
                   </div>
+                  <div class="swiper-slide">
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/npena.jpeg"alt="Nicolas Pena" />
+                    <h4 class="mb-1">Nicolás Pena</h4>
+                    <div class="meta mb-2">Director</div>
+                    <p class="mb-2">Director of strategy and digital transformation.</p>
+                    <nav class="nav social justify-content-center text-center mb-0">
+                      <a href="https://www.linkedin.com/in/npenad/"><i class="uil uil-linkedin"></i></a>
+
+                    </nav>
+                    <!-- /.social -->
+                  </div>
+                  
                   <!--/.swiper-slide -->
                   <div class="swiper-slide">
                     <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/aguirre.jpeg"  alt="Gonzalo Aguirre" />
@@ -373,6 +385,16 @@
                     </nav>
                     <!-- /.social -->
                   </div>
+                  <div class="swiper-slide">
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/spena.jpeg" alt="Sebastian Pena" />
+                    <h4 class="mb-1">Sebastián Pena </h4>
+                    <div class="meta mb-2">Sales </div>
+                    <p class="mb-2">Senior Sales executive.</p>
+                    <nav class="nav social justify-content-center text-center mb-0">
+                      <a href="https://www.linkedin.com/in/sebastian-pena-derosa/"><i class="uil uil-linkedin"></i></a>
+                    </nav>
+                    <!-- /.social -->
+                  </div>
                   <!--/.swiper-slide -->
                   <div class="swiper-slide">
                     <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/nonphoto.jpeg" alt="" />
@@ -380,7 +402,7 @@
                     <div class="meta mb-2">Sales and Ops</div>
                     <p class="mb-2">Operations Manager</p>
                     <nav class="nav social justify-content-center text-center mb-0">
-                      <a href="https://www.linkedin.com/in/alvaro-luis-machado-739220238/?originalSubdomain=uy"><i class="uil uil-linkedin"></i></a>
+                      <a href="https://www.linkedin.com/in/laurasaraviasilvera/"><i class="uil uil-linkedin"></i></a>
                     </nav>
                     <!-- /.social -->
                   </div>
@@ -395,6 +417,7 @@
                     </nav>
                     <!-- /.social -->
                   </div>
+
                   <!--/.swiper-slide -->
                 </div>
                 <!--/.swiper-wrapper -->
