--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -157,7 +157,7 @@
             <div class="row">
               <div class="col-md-9 col-lg-8 col-xl-7 col-xxl-6 mx-auto" data-cues="zoomIn" data-group="page-title" data-interval="-200" data-delay="500">
                 <h2 class="h6 text-uppercase ls-xl text-white mb-5">WE MOVE IT</h2>
-                <h3 class="display-1 fs-54 text-white mb-7">Grow your business with our solutions</h3>
+                <h3 class="display-1 fs-54 text-white mb-7">Solutions to move your business forward</h3>
                 <a href="./assets/media/VideoPRomoLogisticsV1_4-2-2.mp4" class="btn btn-circle btn-white btn-play ripple mx-auto" data-glightbox><i class="icn-caret-right"></i></a>
               </div>
               <!-- /column -->
