--- a/logistics/news.html
+++ b/logistics/news.html
@@ -14,6 +14,23 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/colors/green.css">
   <link rel="preload" href="./assets/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'">
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background-color: #111;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    iframe {
+      width: 90%;
+      height: 95%;
+      border: none;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    }
+  </style>
 </head>
 
 <body>
@@ -113,10 +130,11 @@
           <!-- /.container -->
         </nav>
         <!-- /.navbar -->
-</head>
-<body>
-  <iframe src="newschina.pdf"></iframe>
-</body>
+        </head>
+
+        <body>
+          <iframe src="newschina.pdf"></iframe>
+        </body>
     </div>
     <!-- /.content-wrapper -->
     <footer class="bg-dark text-inverse">
