--- a/logistics/index.html
+++ b/logistics/index.html
@@ -497,7 +497,7 @@
   <script>
     window.ChatKit.mount({
       workflowId: "wf_6904f825047481909f36198a0a2a269d0687102ba226cd40",
-      version: "draft", // o quitá esta línea si ya lo pusiste en producción
+      version: "2", // o quitá esta línea si ya lo pusiste en producción
       container: document.body, // o un div específico si querés
       theme: "dark", // "dark" o "light"
     });
