--- a/logistics/aitesting/2/index.html
+++ b/logistics/aitesting/2/index.html
@@ -508,7 +508,7 @@
             async getClientSecret(currentClientSecret) {
               try {
                 // You can pass a stable user/device id if you have one
-                var res = await fetch('http://localhost:3001/api/chatkit/session', {
+                var res = await fetch('/.netlify/functions/chatkit-session', {
                   method: 'POST',
                   headers: { 'Content-Type': 'application/json' },
                   body: JSON.stringify({ user: (localStorage.getItem('chatkit_device_id') || (function(){ var id = 'device_' + Math.random().toString(36).slice(2); localStorage.setItem('chatkit_device_id', id); return id; })()) })
@@ -520,6 +520,53 @@
                 throw e;
               }
             }
+          },
+          theme: {
+            colorScheme: 'light',
+            radius: 'pill',
+            density: 'normal',
+            color: {
+              accent: {
+                primary: '#3eb6aa',
+                level: 1
+              },
+              surface: {
+                background: '#fcfcfc',
+                foreground: '#3eb6aa'
+              }
+            },
+            typography: {
+              baseSize: 16,
+              fontFamily: '"OpenAI Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", sans-serif',
+              fontFamilyMono: 'ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "DejaVu Sans Mono", "Courier New", monospace',
+              fontSources: [
+                {
+                  family: 'OpenAI Sans',
+                  src: 'https://cdn.openai.com/common/fonts/openai-sans/v2/OpenAISans-Regular.woff2',
+                  weight: 400,
+                  style: 'normal',
+                  display: 'swap'
+                }
+              ]
+            }
+          },
+          composer: {
+            placeholder: 'Chatea con nuestra IA',
+            attachments: { enabled: false },
+            tools: [
+              {
+                id: 'search_docs',
+                label: 'Search docs',
+                shortLabel: 'Docs',
+                placeholderOverride: 'Search documentation',
+                icon: 'book-open',
+                pinned: false
+              }
+            ]
+          },
+          startScreen: {
+            greeting: 'Para iniciar ingresa tus crendenciales del portal de tracking.',
+            prompts: []
           },
           className: 'chatkit-inline-panel'
         });
