--- a/logistics/aitesting/2/index.html
+++ b/logistics/aitesting/2/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/colors/green.css">
   <link rel="preload" href="./assets/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'">
-  <script src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js" async></script>
+  <script src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js" defer></script>
 </head>
 
 <body>
@@ -495,89 +495,110 @@
 
   <!-- ChatKit widget container bottom-right -->
   <div id="my-chat" style="position: fixed; right: 25px; bottom: 25px; z-index: 2147483000;"></div>
+
   <script>
     (function initChatKit() {
       function setup() {
-        var chatEl = document.getElementById('my-chat');
-        if (!chatEl || !chatEl.setOptions) {
-          // ChatKit not yet hydrated; retry shortly
-          return setTimeout(setup, 200);
+        const chatEl = document.getElementById("my-chat");
+
+        // Esperar hasta que ChatKit se cargue
+        if (!window.ChatKit || typeof ChatKit.mount !== "function") {
+          console.warn("⏳ ChatKit aún no cargó, reintentando...");
+          return setTimeout(setup, 400);
         }
-        chatEl.setOptions({
-          api: {
-            async getClientSecret(currentClientSecret) {
-              try {
-                // You can pass a stable user/device id if you have one
-                var res = await fetch('/.netlify/functions/chatkit-session', {
-                  method: 'POST',
-                  headers: { 'Content-Type': 'application/json' },
-                  body: JSON.stringify({ user: (localStorage.getItem('chatkit_device_id') || (function(){ var id = 'device_' + Math.random().toString(36).slice(2); localStorage.setItem('chatkit_device_id', id); return id; })()) })
-                });
-                var data = await res.json();
-                return data.client_secret;
-              } catch (e) {
-                console.error('Failed to obtain ChatKit client_secret', e);
-                throw e;
-              }
-            }
-          },
-          theme: {
-            colorScheme: 'light',
-            radius: 'pill',
-            density: 'normal',
-            color: {
-              accent: {
-                primary: '#3eb6aa',
-                level: 1
-              },
-              surface: {
-                background: '#fcfcfc',
-                foreground: '#3eb6aa'
-              }
-            },
-            typography: {
-              baseSize: 16,
-              fontFamily: '"OpenAI Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", sans-serif',
-              fontFamilyMono: 'ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "DejaVu Sans Mono", "Courier New", monospace',
-              fontSources: [
-                {
-                  family: 'OpenAI Sans',
-                  src: 'https://cdn.openai.com/common/fonts/openai-sans/v2/OpenAISans-Regular.woff2',
-                  weight: 400,
-                  style: 'normal',
-                  display: 'swap'
+
+        console.log("✅ ChatKit detectado, inicializando widget...");
+
+        ChatKit.mount({
+          element: chatEl,
+          options: {
+            api: {
+              async getClientSecret() {
+                try {
+                  const userId =
+                    localStorage.getItem("chatkit_device_id") ||
+                    (() => {
+                      const id = "device_" + Math.random().toString(36).slice(2);
+                      localStorage.setItem("chatkit_device_id", id);
+                      return id;
+                    })();
+
+                  const res = await fetch("/.netlify/functions/chatkit-session", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ user: userId }),
+                  });
+
+                  const data = await res.json();
+                  console.log("🔑 client_secret recibido:", data);
+                  return data.client_secret;
+                } catch (e) {
+                  console.error("❌ Error obteniendo client_secret:", e);
+                  throw e;
                 }
-              ]
-            }
+              },
+            },
+
+            // --- Apariencia ---
+            theme: {
+              colorScheme: "light",
+              radius: "pill",
+              density: "normal",
+              color: {
+                accent: {
+                  primary: "#3eb6aa",
+                  level: 1,
+                },
+                surface: {
+                  background: "#fcfcfc",
+                  foreground: "#3eb6aa",
+                },
+              },
+              typography: {
+                baseSize: 16,
+                fontFamily:
+                  '"OpenAI Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", sans-serif',
+                fontFamilyMono:
+                  'ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "DejaVu Sans Mono", "Courier New", monospace',
+                fontSources: [
+                  {
+                    family: "OpenAI Sans",
+                    src: "https://cdn.openai.com/common/fonts/openai-sans/v2/OpenAISans-Regular.woff2",
+                    weight: 400,
+                    style: "normal",
+                    display: "swap",
+                  },
+                ],
+              },
+            },
+
+            // --- Zona de texto del chat ---
+            composer: {
+              placeholder: "Chatea con nuestra IA",
+              attachments: { enabled: false },
+            },
+
+            // --- Pantalla inicial ---
+            startScreen: {
+              greeting:
+                "Para iniciar, ingresa tus credenciales del portal de tracking:",
+              prompts: [],
+            },
           },
-          composer: {
-            placeholder: 'Chatea con nuestra IA',
-            attachments: { enabled: false },
-            tools: [
-              {
-                id: 'search_docs',
-                label: 'Search docs',
-                shortLabel: 'Docs',
-                placeholderOverride: 'Search documentation',
-                icon: 'book-open',
-                pinned: false
-              }
-            ]
-          },
-          startScreen: {
-            greeting: 'Para iniciar ingresa tus crendenciales del portal de tracking.',
-            prompts: []
-          },
-          className: 'chatkit-inline-panel'
         });
       }
-      if (document.readyState === 'complete' || document.readyState === 'interactive') {
+
+      if (
+        document.readyState === "complete" ||
+        document.readyState === "interactive"
+      ) {
         setTimeout(setup, 0);
       } else {
-        document.addEventListener('DOMContentLoaded', setup);
+        document.addEventListener("DOMContentLoaded", setup);
       }
     })();
   </script>
+
 
 </body>
 
